--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
