--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "next": "12.1.0",
     "nextjs-progressbar": "^0.0.14",
+    "nodemailer": "^6.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "sweetalert2": "^11.4.8",
     "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
